# ECE-8780---GPU-Computing

./: README.md
gpu_hw1_grayscale/: CMakeLists.txt  Makefile  README.md  im2Gray.cu  im2Gray.h  main.cpp  untitled.txt  utils.h
